<resources>
    <string name="app_name">Unit Converter</string>
    <string-array name="conversions">
        <item>F to C</item>
        <item>lb to kg</item>
        <item>oz to ml</item>
        <item>ft to m</item>
    </string-array>
</resources>